[project]
name = "cesar-smart-hass"
version = "0.1.9"
description = "Cesar Smart ReadOnly - HACS-compatible Home Assistant custom integration"
authors = [{ name = "roblencheg" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
